# chip8_emulator

./: .gitmodules  CMakeLists.txt  README.md  commands.txt  configure_and_build.sh
inc/: FakeChip8.h  FakeChip8Runner.h  SfmlGui.h
src/: FakeChip8.cc  SfmlGui.cc  main.cc
